--- a/compose.yaml
+++ b/compose.yaml
@@ -7,5 +7,19 @@ services:
     networks:
       - tlfmrw_network
 
+  redis:
+    container_name: redis
+    image: redis:8.4
+    ports:
+      - 6379:6379
+    networks:
+      - tlfmrw_network
+    volumes:
+      - redis_data:/data
+    command: redis-server --appendonly yes
+
+volumes:
+  redis_data:
+
 networks:
   tlfmrw_network:
