--- a/compose.yaml
+++ b/compose.yaml
@@ -15,9 +15,11 @@ services:
     command: postgres -c config_file=/etc/postgresql/postgresql.conf 
     environment:
       POSTGRES_PASSWORD: TLFMRW1
-
     networks:
       - tlfmrw_network
+    volumes:
+      - supabase_data:/var/lib/postgresql/data
+
   redis:
     container_name: redis
     image: redis:8.4
@@ -31,6 +33,7 @@ services:
 
 volumes:
   redis_data:
+  supabase_data:
 
 networks:
   tlfmrw_network:
