--- a/tlfmrw-front/package.json
+++ b/tlfmrw-front/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "debounce": "^3.0.0",
     "ioredis": "^5.8.2",
     "next": "^16.0.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "use-debounce": "^10.0.6",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
