--- a/tlfmrw-front/tsconfig.json
+++ b/tlfmrw-front/tsconfig.json
@@ -29,6 +29,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "app/reader/[mangaId]/chapter/[chapterId]/page.jsx"  ],
+, "app/reader/[mangaId]/chapter/[chapterId]/page.jsx", "app/signup/page.jsx", "app/reader/page.jsx", "app/library/page.jsx", "app/reader/page.jsx", "app/login/page.jsx", "app/library/page.jsx"  ],
   "exclude": ["node_modules"]
 }
